--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation platform('com.google.cloud:libraries-bom:26.1.2')
+	implementation 'com.google.cloud:google-cloud-pubsub'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
 }
 
 tasks.named('test') {
